syntax = "proto3";

package company.v1;

import "buf/validate/validate.proto";
import "contact/v1/contact.proto";
import "google/protobuf/timestamp.proto";
import "staff/v1/staff.proto";

option go_package = "github.com/0utl1er-tech/mom-company/gen/pb/company/v1;companyv1";

service CompanyService {
  rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse);
  rpc GetCompany(GetCompanyRequest) returns (GetCompanyResponse);
  rpc ListCompanies(ListCompaniesRequest) returns (ListCompaniesResponse);
}

message Company {
  string id = 1;
  string trademark = 2;
  string type = 3;
  string position = 4;
  string address = 5;
  string company_code = 6;
  contact.v1.Contact contact = 7;
  repeated staff.v1.Staff staff = 8;
  google.protobuf.Timestamp created_at = 9;
}

message CreateCompanyRequest {
  string trademark = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }];
  string type = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }];
  string position = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 200
  }];
  string address = 4 [(buf.validate.field).string = {
    min_len: 1
    max_len: 500
  }];
  string company_code = 5 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
    pattern: "^[A-Z0-9-]+$"
  }];
  contact.v1.ContactRequest contact = 6 [(buf.validate.field).required = true];
  repeated staff.v1.Staff staff = 7;
}

message CreateCompanyResponse {
  Company company = 1;
}

message UpdateCompanyRequest {
  string id = 1;
  optional string trademark = 2;
  optional string type = 3;
  optional string position = 4;
  optional string address = 5;
  optional string company_code = 6;
  contact.v1.ContactRequest contact = 7;
  repeated staff.v1.Staff staff = 8;
}

message GetCompanyRequest {
  string id = 1;
}

message GetCompanyResponse {
  Company company = 1;
}

message ListCompaniesRequest {
  int32 page = 1 [(buf.validate.field).int32 = {gte: 1}];
  int32 limit = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 100
  }];
}

message ListCompaniesResponse {
  repeated Company companies = 1;
}
