syntax = "proto3";

package staff.v1;

import "contact/v1/contact.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/0utl1er-tech/mom-company/gen/pb/staff/v1;staffv1";

message Staff {
  string id = 1;
  string name = 2;
  string role = 3;
  contact.v1.Contact contact = 4;
  google.protobuf.Timestamp created_at = 6;
}

message CreateStaffRequest {
  string name = 1;
  string role = 2;
  string company_id = 3;
  contact.v1.ContactRequest contact = 4;
}

message CreateStaffResponse {
  Staff staff = 1;
}

message UpdateStaffRequest {
  string id = 1;
  optional string name = 2;
  optional string role = 3;
  contact.v1.ContactRequest contact = 4;
}

message UpdateStaffResponse {
  Staff staff = 1;
}

message DeleteStaffRequest {
  string id = 1;
}

message DeleteStaffResponse {
  string id = 1;
}
